--- a/.github/workflows/Project-1-main.yml
+++ b/.github/workflows/Project-1-main.yml
@@ -46,4 +46,4 @@ jobs:
         run: npm install -g surge
         
       - name: Deploying on surge
-        run: surge ./build http://project-1-urdu.surge.sh/ --token ${{secrets.PROJ_1}} 
+        run: surge ./build http://project-1-urdu.surge.sh/ --token ${{secrets.PROJECT_1}} 
